5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1859_1291.log
== TEST (2019-06-26 14:07:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([50,30,10],[60,40,15],[40,20,8])
p= dot(inv(v),g.t)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:08:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array[[50,30,10],[60,40,15],[40,20,8]]
p= dot(inv(v),g.t)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:08:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,30,10],[60,40,15],[40,20,8]])
p= dot(inv(v),g.t)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:09:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,30,10],[60,40,15],[40,20,8]])
p= dot(inv(v),g.T)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:11:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,30,10],[60,40,15],[40,20,8]])
p= dot(inv(g),v.T)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:12:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,30,10],[60,40,15],[40,20,8]])
p= dot(inv(g),v.T)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:13:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:13:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print(round(p,1)

-- ERROR:
File "XXXX", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:14:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print(round(p,0)
-- ERROR:
File "XXXX", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:14:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
e=round(p,1)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:15:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
from numpy.ndarray import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
e=round(p,1)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:15:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
e=round(p,1)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:16:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
e=round(size(p),1)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
e= round(p[i],1)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
for i in range(p):
	e= round(p[i],1)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:19:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
for i in p:
	e= round(p[i],1)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:23:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],1))
print("ortopedico:",round(p[1],1))
print("infantil:".round(p[2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:24:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],1))
print("ortopedico:",round(p[1],1))
print("infantil:",round(p[2],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:24:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:25:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:25:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
-- EXECUTION TIME:
1.41811
-- TEST CASE 1:
---- input:
[623980,350700,134591]
---- correct output:
regular: 1212.0
ortopedico: 3265.0
infantil: 9187.0
regular
---- user output:
regular: 1212.0
ortopedico: 3265.0
infantil: 9187.0
-- TEST CASE 2:
---- input:
[375920,219120,80734]
---- correct output:
regular: 2532.0
ortopedico: 1850.0
infantil: 3458.0
ortopedico
---- user output:
regular: 2532.0
ortopedico: 1850.0
infantil: 3458.0
-- TEST CASE 3:
---- input:
[994800,620500,221415]
---- correct output:
regular: 9650.0
ortopedico: 7485.0
infantil: 1580.0
infantil
---- user output:
regular: 9650.0
ortopedico: 7485.0
infantil: 1580.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:26:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
print(min(p[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:29:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in range v:
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
File "XXXX", line 10
    for i in range v:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:29:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in range p:
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
File "XXXX", line 10
    for i in range p:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:29:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in range(p):
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:29:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in p:
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:30:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in size(p):
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:31:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in tam(p):
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:31:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in len(p):
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:32:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in len(p):
	if(p[i]==min(p)):
		print("regular")
	elif(p[i]==min(p)):
		print("ortopedico")
	elif(p[i]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:32:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in p:
	if(p[i]==min(p)):
		print("regular")
	elif(p[i]==min(p)):
		print("ortopedico")
	elif(p[i]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:32:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in range(p):
	if(p[i]==min(p)):
		print("regular")
	elif(p[i]==min(p)):
		print("ortopedico")
	elif(p[i]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:33:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in range(p):
	if(p[i]==min(p)):
		print("regular")
	elif(p[i]==min(p)):
		print("ortopedico")
	elif(p[i]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:33:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in p:
	if(p[i]==min(p)):
		print("regular")
	elif(p[i]==min(p)):
		print("ortopedico")
	elif(p[i]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:33:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in p:
	if(p[i;]==min(p)):
		print("regular")
	elif(p[i;]==min(p)):
		print("ortopedico")
	elif(p[i;]==min(p)):
		print("infantil")
-- ERROR:
File "XXXX", line 11
    if(p[i;]==min(p)):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:33:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in p:
	if(p[i:]==min(p)):
		print("regular")
	elif(p[i:]==min(p)):
		print("ortopedico")
	elif(p[i:]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:34:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in p:
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:34:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
while(p)
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
File "XXXX", line 10
    while(p)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:34:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
while(p):
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:35:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
while(p.all):
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:36:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
while(p.all):
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:37:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
while(1):
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:39:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
for i in p:
	if(p[0]==min(p)):
		print("regular")
	elif(p[1]==min(p)):
		print("ortopedico")
	elif(p[2]==min(p)):
		print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:42:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
if(p[0]==min(p)):
	print("regular")
elif(p[1]==min(p)):
	print("ortopedico")
elif(p[2]==min(p)):
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:42:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
if(p[0]==min(p)):
	print("regular")
elif(p[1]==min(p)):
	print("ortopedico")
elif(p[2]==min(p)):
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:43:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

v= array(eval(input()))
g=array([[50,60,40],[30,40,20],[10,15,8]])
p= dot(inv(g),v.T)
print("regular:",round(p[0],0))
print("ortopedico:",round(p[1],0))
print("infantil:",round(p[2],0))
if(p[0]==min(p)):
	print("regular")
elif(p[1]==min(p)):
	print("ortopedico")
elif(p[2]==min(p)):
	print("infantil")
-- EXECUTION TIME:
1.04567
-- TEST CASE 1:
---- input:
[623980,350700,134591]
---- correct output:
regular: 1212.0
ortopedico: 3265.0
infantil: 9187.0
regular
---- user output:
regular: 1212.0
ortopedico: 3265.0
infantil: 9187.0
regular
-- TEST CASE 2:
---- input:
[375920,219120,80734]
---- correct output:
regular: 2532.0
ortopedico: 1850.0
infantil: 3458.0
ortopedico
---- user output:
regular: 2532.0
ortopedico: 1850.0
infantil: 3458.0
ortopedico
-- TEST CASE 3:
---- input:
[994800,620500,221415]
---- correct output:
regular: 9650.0
ortopedico: 7485.0
infantil: 1580.0
infantil
---- user output:
regular: 9650.0
ortopedico: 7485.0
infantil: 1580.0
infantil
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
